--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@ai-sdk/anthropic": "^1.2.12",
     "@ai-sdk/google": "^1.2.22",
     "@ai-sdk/openai": "^1.3.23",
-    "@ai-sdk/openai-compatible": "^0.2.15",
+    "@ai-sdk/openai-compatible": "^0.2.16",
     "@ai-sdk/react": "^1.2.12",
-    "@ai-sdk/xai": "^1.2.17",
+    "@ai-sdk/xai": "^1.2.18",
     "@modelcontextprotocol/sdk": "^1.15.1",
     "@openrouter/ai-sdk-provider": "^0.4.6",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -70,7 +70,7 @@
     "@tiptap/starter-kit": "^2.26.1",
     "@tiptap/suggestion": "^2.26.1",
     "@xyflow/react": "^12.8.2",
-    "ai": "^4.3.18",
+    "ai": "^4.3.19",
     "bcrypt-ts": "^7.1.0",
     "better-auth": "^1.2.12",
     "chokidar": "^4.0.3",
@@ -82,12 +82,12 @@
     "deepmerge": "^4.3.1",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.41.0",
-    "emoji-picker-react": "^4.13.1",
-    "framer-motion": "^12.23.5",
+    "emoji-picker-react": "^4.13.2",
+    "framer-motion": "^12.23.6",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "json-schema": "^0.4.0",
     "lucide-react": "^0.486.0",
-    "mermaid": "^11.8.1",
+    "mermaid": "^11.9.0",
     "nanoid": "^5.1.5",
     "next": "15.3.2",
     "next-intl": "^4.3.4",
@@ -116,7 +116,7 @@
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.19.7",
+    "@types/node": "^20.19.8",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -134,10 +134,7 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": [
-      "pnpm format",
-      "pnpm lint:fix"
-    ]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
