--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@ai-sdk/openai-compatible": "^0.2.16",
     "@ai-sdk/react": "^1.2.12",
     "@ai-sdk/xai": "^1.2.18",
-    "@modelcontextprotocol/sdk": "^1.15.1",
+    "@modelcontextprotocol/sdk": "^1.16.0",
     "@openrouter/ai-sdk-provider": "^0.4.6",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -72,7 +72,7 @@
     "@xyflow/react": "^12.8.2",
     "ai": "^4.3.19",
     "bcrypt-ts": "^7.1.0",
-    "better-auth": "^1.2.12",
+    "better-auth": "^1.3.2",
     "chokidar": "^4.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -101,7 +101,7 @@
     "recharts": "^2.15.4",
     "remark-gfm": "^4.0.1",
     "server-only": "^0.0.1",
-    "shiki": "^3.8.0",
+    "shiki": "^3.8.1",
     "sonner": "^2.0.6",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
@@ -116,7 +116,7 @@
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/json-schema": "^7.0.15",
-    "@types/node": "^20.19.8",
+    "@types/node": "^20.19.9",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
@@ -134,10 +134,7 @@
     "vitest": "^3.2.4"
   },
   "lint-staged": {
-    "*.{js,json,mjs,ts,yaml,tsx,css}": [
-      "pnpm format",
-      "pnpm lint:fix"
-    ]
+    "*.{js,json,mjs,ts,yaml,tsx,css}": ["pnpm format", "pnpm lint:fix"]
   },
   "packageManager": "pnpm@10.2.1",
   "engines": {
